# Stock-Prediction-Models

./: .mailmap  INSTALL.md  README.md  environment.yml  pyproject.toml
agent/: 1.turtle-agent.ipynb  14.actor-critic-agent.ipynb  2.moving-average-agent.ipynb  3.signal-rolling-agent.ipynb  4.policy-gradient-agent.ipynb  5.q-learning-agent.ipynb
dataset/: GOOG-year.csv  GOOG.csv  TSLA.csv  downloader_crypto.py
deep-learning/: 1.lstm.ipynb  21.multihead-attention.ipynb  31.transformer-and-time-embeddings.ipynb
deep-learning/LSTM-Tutorial/: LSTM-Tutorial.ipynb  stock_market_data-AAL.csv
free-agent/: evolution-strategy-agent.ipynb  evolution-strategy-bayesian-agent.ipynb
house-price-prediction/: Untitled.ipynb  app.py  app1.py  dashapp.py
misc/: AchievingStationarity.ipynb  Anomaly-Detection-LSTM.ipynb  bitcoin-analysis-lstm.ipynb  kijang-emas-bank-negara.ipynb  outliers.ipynb
realtime-agent/: agent.ipynb  model.pkl  realtime-evolution-strategy.ipynb  request.ipynb
simulation/: portfolio-optimization.ipynb
simulation/Deep-Portfolio-Management/: Debugging HRP.ipynb  Deep_Quantile_Regression.ipynb  Optimization and ML benchmark | Cryptocurrency.ipynb  Reinforcement Learning.ipynb
